--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="navbar ">
-        <h1>Camagru</h1>
+        <h1 style="text-align: center;">Camagru</h1>
     </div>
     <div class="top-container">
         <video id="video">Stream unavailable</video>
+    </br>
         <button id="photo-button" class="btn btn-dark">Take photo</button>
         <select id="photo-filter ">
             <option value="none">Normal</option>
@@ -24,7 +25,8 @@
             <option value="contrast(200%)">Contrast</option>
         </select>
         <button id="clear-button">Clear</button>
-        <canvas id="canvas"></canvas>
+    </br>
+        <canvas id="canvas" style="margin-top: 10px;"></canvas>
     </div>
     <div class="bottom-container">
         <div id="photos"></div>
