--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="navbar ">
         <h1 style="text-align: center;">Camagru</h1>
+        <a href="feed.php">Go to feed</a>
     </div>
     <div class="top-container">
         <video id="video">Stream unavailable</video>
